# SCARABEO

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
analyzers/: __init__.py
analyzers/archive-analyzer/: Dockerfile  __init__.py  analyzer.py
analyzers/capa-analyzer/: Dockerfile  __init__.py  analyzer.py
analyzers/doc-analyzer/: __init__.py  analyzer.py
analyzers/elf-analyzer/: __init__.py  analyzer.py
analyzers/pe-analyzer/: Dockerfile  __init__.py  analyzer.py
analyzers/script-analyzer/: __init__.py  analyzer.py
analyzers/similarity-analyzer/: Dockerfile  __init__.py  analyzer.py
analyzers/triage-universal/: Dockerfile  __init__.py  analyzer.py
analyzers/yara-analyzer/: Dockerfile  __init__.py  analyzer.py
analyzers/yara-analyzer/rules/: starter.yar
contracts/: openapi.yaml
contracts/schemas/: artifact.schema.json  finding.schema.json  input.schema.json  ioc.schema.json  partial.schema.json  provenance.schema.json  report.schema.json
docs/: ai_integration.md  analyzers.md  architecture.md  evasion.md  hardening.md  operations.md  pipelines.md  security.md
infra/: docker-compose.yml
infra/k8s/: cli.yaml  ingest.yaml  minio.yaml  namespace.yaml  orchestrator.yaml  postgres.yaml  redis.yaml  search.yaml  web.yaml  worker.yaml
pipelines/: __init__.py  archive.yaml  deep.yaml  triage.yaml
scarabeo/: __init__.py  adapters.py  ai.py  auth.py  banner.py  evasion.py  explain.py  fingerprint.py  intel.py  ioc.py  llm.py  logging.py  metrics.py  models.py  rate_limit.py  retention.py  scoring.py  timeline.py  validation.py  version.py
scripts/: demo_api.sh  demo_pipeline.py
services/api/: Dockerfile  __main__.py  cases.py  clusters.py  review.py
services/cli/: Dockerfile  __init__.py  __main__.py  client.py  console.py
services/ingest/: .env.example  Dockerfile  __init__.py  __main__.py  alembic.ini  app.py  config.py  database.py  filetype.py  hashing.py  models.py  queue.py  service.py  storage.py
services/ingest/alembic/: env.py  script.py.mako
services/ingest/alembic/versions/: 001_initial.py  002_add_sample_relations.py  003_audit_completeness.py  004_add_search_cases_intel.py  005_add_verdict_tags_notes.py  006_add_similarity_clustering.py  007_add_sample_fingerprints.py
services/orchestrator/: .env.example  Dockerfile  __init__.py  __main__.py  app.py  config.py  database.py  models.py  queue.py  service.py
services/search/: Dockerfile  __init__.py  __main__.py  app.py  config.py  database.py  indexer.py  models.py  query.py
services/web/: Dockerfile  __init__.py  __main__.py  app.py  config.py
services/web/templates/: cluster.html  clusters.html  home.html  sample.html  search.html
services/worker/: .env.example  Dockerfile  __init__.py  __main__.py  clustering.py  config.py  database.py  docker_executor.py  merger.py  models.py  processor.py  queue.py  retention.py  router.py  storage.py  worker.py
tests/: conftest.py  test_ai.py  test_analysis_model.py  test_analyzer.py  test_analyzers.py  test_cli.py  test_clustering.py  test_enterprise_hardening.py  test_evasion.py  test_explain.py  test_filetype.py  test_fingerprint.py  test_hashing.py  test_ingest_integration.py  test_integration.py  test_ioc.py  test_pe_analyzer.py  test_review.py  test_schema_validation.py  test_schemas.py  test_scoring.py  test_search.py  test_service.py  test_timeline.py  test_version.py  test_web.py  test_worker_router_merger.py
tests/examples/: input.json  report.json
tests/fixtures/: file_samples.py  pe_analyzer_output.json  triage_universal_output.json
