[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarabeo"
version = "0.1.0"
description = "Scarabeo Analysis Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PolyForm Noncommercial 1.0.0"}
authors = [
    {name = "Bogdan Ticu", email = "bogdanticuoffice@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "jsonschema>=4.20.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
]

api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

celery_worker = [
    "celery>=5.3.4",
    "redis>=5.0.1",
    "psycopg2-binary>=2.9.9",
]

ingest = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "redis>=5.0.1",
    "alembic>=1.13.0",
]

orchestrator = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
]

worker = [
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "redis>=5.0.1",
    "docker>=7.0.0",
]

all = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "redis>=5.0.1",
    "alembic>=1.13.0",
    "docker>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/scarabeo/scarabeo"
Documentation = "https://github.com/scarabeo/scarabeo/docs"
Repository = "https://github.com/scarabeo/scarabeo"

[tool.setuptools.packages.find]
include = ["scarabeo*", "services*", "analyzers*"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = [
    "E501",
]
src = ["scarabeo", "services", "analyzers"]

[tool.ruff.isort]
known-first-party = ["scarabeo", "services", "analyzers"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = ["scarabeo", "services", "analyzers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["scarabeo", "services", "analyzers"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
